fix: align wrapper element in the center

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.wrapper {
+  width: 740px;
+  margin: 0 auto;
+}
 textarea {
   width: 70%;
   height: 50px;
@@ -8,7 +12,6 @@ textarea {
 }
 
 .keyboard-container {
-  width: 70%;
   margin: 0 auto;
 }
 .row {
